# url-install

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: decompressor.rs  downloader.rs  file_downloader.rs  main.rs  slicer.rs  traits.rs  url_install.rs
