[package]
name = "url-install"
version = "0.1.0"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
native-tls = { version = "0.2.4", features = ["vendored"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"
clap = "3.0.0-beta.2"