[package]
name = "url-install"
version = "0.1.0"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
error-chain = "0.12.2"
flate2 = "1.0.18"
http = "0.2.1"
is_executable = "0.1.2"
native-tls = { version = "0.2.4", features = ["vendored"] }
openssl = { version = "0.10.8", features = ["vendored"] }
rand = "0.7"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tar="0.4.30"
tokio = { version = "0.2", features = ["full"] }
unzip= "0.1.0"