[package]
name = "url-install"
version = "0.1.0"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
error-chain = "0.12.4"
flate2 = "1.0.22"
http = "0.2.5"
is_executable = "1.0.1"
native-tls = { version = "0.2.8", features = ["vendored"] }
openssl = { version = "0.10.37", features = ["vendored"] }
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
tar="0.4.37"
tokio = { version = "1.13.0", features = ["full"] }
unzip= "0.1.0"

[features]
# Treat warnings as a build error.
strict = []
